# fantasy_console

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  Makefile  README.md  luajit.cmake  main.c
examples/: gravity.lua  hello.lua  lines.lua  platformer.lua
patches/: luajitMk.patch
src/: Makefile  btn.c  btn.h  gfx.c  gfx.h  m.c  m.h  main.c
utils/: install_build_deps_ubuntu.sh
